Fix unwanted gap in menubar

--- a/src/components/Navbar/Navbar.css
+++ b/src/components/Navbar/Navbar.css
@@ -114,6 +114,10 @@
         display: block;
     }
 
+    .alignment-placeholder {
+        display: none;
+    }
+
     .open-menu {
         transform: translateX(-100%);
     }
